# ark-web-app

./: .gitignore  Cargo.toml  README.md  package.json
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/api/: mod.rs  multi_wallet.rs  transactions.rs  wallet.rs
backend/src/models/: wallet.rs
backend/src/services/: ark_grpc.rs  mod.rs  transactions.rs  wallet.rs
backend/src/services/faucet/: mod.rs
backend/src/services/multi_wallet/: mod.rs
backend/src/services/offchain/: exit_manager.rs  mod.rs  round_coordinator.rs  script_manager.rs  subscription_manager.rs  transaction_builder.rs  vtxo_manager.rs
backend/src/services/onchain/: fee_estimator.rs  mod.rs  transaction_builder.rs  utxo_manager.rs
backend/src/storage/: db_manager.rs  key_manager.rs  mod.rs  schema.sql
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/api/: index.js
frontend/src/components/: Navigation.js
frontend/src/pages/: Dashboard.js  Receive.js  Send.js  Settings.js  Transactions.js
