[package]
name = "ark-web-backend"
version = "0.1.0"
edition = "2021"
description = "Backend for demonstrating Ark protocol"
authors = ["Dikshant <dikshant.073@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
# Ark dependencies
ark-client = { git = "https://github.com/ArkLabsHQ/ark-rs", branch = "master" }
ark-core = { git = "https://github.com/ArkLabsHQ/ark-rs", branch = "master" }
ark-bdk-wallet = { git = "https://github.com/ArkLabsHQ/ark-rs", branch = "master" }
ark-grpc = { git = "https://github.com/ArkLabsHQ/ark-rs", branch = "master" }

# Web server
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tokio = { version = "1.28", features = ["full"] }

# Grpc Requirements
tonic = "0.9"  # gRPC framework
prost = "0.11"  # Protocol Buffers

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bitcoin
bitcoin = { version = "0.32.4", features = ["rand"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
chrono = "0.4.40"
lazy_static = "1.5.0"
once_cell = "1.21.3"
hex = "0.4.3"
rand = "0.9.1"