[package]
name = "ark-web-backend"
version = "0.1.0"
edition = "2021"
description = "Backend for demonstrating Ark protocol"
authors = ["Dikshant <dikshant.073@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
# Ark dependencies
ark-client = { git = "https://github.com/ArkLabsHQ/ark-rs", rev = "c754d7adc8552b14d9d14ef871df271196089d8f" }
ark-core = { git = "https://github.com/ArkLabsHQ/ark-rs", rev = "c754d7adc8552b14d9d14ef871df271196089d8f" }
ark-bdk-wallet = { git = "https://github.com/ArkLabsHQ/ark-rs", rev = "c754d7adc8552b14d9d14ef871df271196089d8f" }
ark-grpc = { git = "https://github.com/ArkLabsHQ/ark-rs", rev = "c754d7adc8552b14d9d14ef871df271196089d8f" }

# Web server
axum = { version = "0.7.9", features = ["macros"] }
tower = "0.5.1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1.28", features = ["full"] }

# Grpc Requirements
tonic = "0.12.3"  # gRPC framework
prost = "0.11"  # Protocol Buffers

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Bitcoin
bitcoin = { version = "0.32.6", features = ["rand"] }

# Utilities
esplora-client = "0.12.0"
rusqlite = { version = "0.35.0", features = ["bundled"] }
bip39 = { version = "2.1.0", features = ["rand"] }
bincode = "2.0.1"
parking_lot = { version = "0.12", features = ["send_guard"] }
async-trait = "0.1.88"
reqwest = { version = "0.11", features = ["json"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
chrono = "0.4.40"
lazy_static = "1.5.0"
once_cell = "1.21.3"
hex = "0.4.3"
rand = "0.9.1"
tempfile = "3.20.0"